log
Sun Mar 13 22:51:44 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:8: error: expected expression before ‘=’ token
     c* = a + b;
        ^
Compilation failed
82b7e0c
